// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`import-rename-codemod Should move default import and named imports: Should move default import and named imports 1`] = `

import ADefault, { One, Two, Three } from 'one'

      ↓ ↓ ↓ ↓ ↓ ↓

import ADefault, { One, Two } from 'two';
import { Three } from 'one';


`;

exports[`import-rename-codemod Should move default to default: Should move default to default 1`] = `

import One from 'one'

      ↓ ↓ ↓ ↓ ↓ ↓

import One from 'two';


`;

exports[`import-rename-codemod Should move default to named and move others along: Should move default to named and move others along 1`] = `

import One, { Two } from 'one'

      ↓ ↓ ↓ ↓ ↓ ↓

import { One, Two } from 'two';


`;

exports[`import-rename-codemod Should move default to named while keeping others that are left: Should move default to named while keeping others that are left 1`] = `

import One, { Two } from 'one'

      ↓ ↓ ↓ ↓ ↓ ↓

import { One } from 'two';
import { Two } from 'one';


`;

exports[`import-rename-codemod Should move default to named: Should move default to named 1`] = `

import One from 'one'

      ↓ ↓ ↓ ↓ ↓ ↓

import { One } from 'two';


`;

exports[`import-rename-codemod Should move only default import: Should move only default import 1`] = `

import ADefault, { One, Two, Three } from 'one'

      ↓ ↓ ↓ ↓ ↓ ↓

import ADefault from 'two';
import { One, Two, Three } from 'one';


`;

exports[`import-rename-codemod Should not create useless default import if 'from' library import is present but has no required named import: Should not create useless default import if 'from' library import is present but has no required named import 1`] = `

import SomeImport from 'one'

      ↓ ↓ ↓ ↓ ↓ ↓

import SomeImport from 'one';


`;

exports[`import-rename-codemod Should not produce useless import if no match when default and named specifiers: Should not produce useless import if no match when default and named specifiers 1`] = `

import { Three } from 'one'

      ↓ ↓ ↓ ↓ ↓ ↓

import { Three } from 'one';


`;

exports[`import-rename-codemod Should not produce useless import if no match: Should not produce useless import if no match 1`] = `

import One, { Two } from 'one'

      ↓ ↓ ↓ ↓ ↓ ↓

import One, { Two } from 'one';


`;

exports[`import-rename-codemod When named to default should change import: When named to default should change import 1`] = `

import { One } from 'one'

      ↓ ↓ ↓ ↓ ↓ ↓

import One from 'two';


`;

exports[`import-rename-codemod When named to named and imports should be renamed and default should be preserved: When named to named and imports should be renamed and default should be preserved 1`] = `

import ADefault, { One, Two } from 'one'

      ↓ ↓ ↓ ↓ ↓ ↓

import { OneR, TwoR } from 'two';
import ADefault from 'one';


`;

exports[`import-rename-codemod When named to named and imports should be renamed: When named to named and imports should be renamed 1`] = `

import { One, Two } from 'one'

      ↓ ↓ ↓ ↓ ↓ ↓

import { OneR, TwoR } from 'two';


`;

exports[`import-rename-codemod When named to named import and multiple imported and all moved it should keep and change import: When named to named import and multiple imported and all moved it should keep and change import 1`] = `

import { One, Two } from 'one'

      ↓ ↓ ↓ ↓ ↓ ↓

import { One, Two } from 'two';


`;

exports[`import-rename-codemod When named to named import and multiple imported and only one identifier moved it should keep one import and create new import: When named to named import and multiple imported and only one identifier moved it should keep one import and create new import 1`] = `

import { One, Two } from 'one'

      ↓ ↓ ↓ ↓ ↓ ↓

import { Two } from 'two';
import { One } from 'one';


`;

exports[`import-rename-codemod When named to named import and only one imported should change current import: When named to named import and only one imported should change current import 1`] = `

import { One } from 'one'

      ↓ ↓ ↓ ↓ ↓ ↓

import { One } from 'two';


`;

exports[`import-rename-codemod When named to named with 'as' import and multiple imported and all moved it should keep and change import: When named to named with 'as' import and multiple imported and all moved it should keep and change import 1`] = `

import { One as OneA, Two as TwoA } from 'one'

      ↓ ↓ ↓ ↓ ↓ ↓

import { One as OneA, Two as TwoA } from 'two';


`;

exports[`import-rename-codemod When wildcard should move all imports: When wildcard should move all imports 1`] = `

import ADefault, { One, Two, Three } from 'one'

      ↓ ↓ ↓ ↓ ↓ ↓

import ADefault, { One, Two, Three } from 'two';


`;
